--- a/src/locale/messages.json
+++ b/src/locale/messages.json
@@ -5,13 +5,16 @@
     "emailView.hideDetail": "Hide Details",
     "footer.title": "Temporary Email Service",
     "footer.subtitle": "Secure, disposable email addresses",
-    "footer.home": " Home ",
-    "footer.10MinMail": " 10 Minutes Mail ",
-    "footer.20MinMail": " 20 Minutes Mail ",
-    "footer.30MinMail": " 30 Minutes Mail ",
     "footer.privacyPolicy": " Privacy Policy ",
+    "footer.termsConditions": " Terms & Conditions ",
     "footer.copyright": " © {$INTERPOLATION} Temporary Email Service. All rights reserved. ",
+    "header.logo.alt": "Temporary Email Service Logo",
     "header.online": "Online",
+    "nav.home": "Home",
+    "nav.about": "About",
+    "nav.services": "Services",
+    "nav.contact": "Contact",
+    "header.menu.toggle": "Toggle menu",
     "mainTempMail.title": " Your Temporary Email ",
     "mainTempMail.newEmail": "New Email",
     "mainTempMail.recentEmail": " Recent Emails ",
@@ -78,6 +81,35 @@
     "saveSuccess.sentToLabel": "Sent to:",
     "common.close": " Close ",
     "saveSuccess.emailLink": " Email Link ",
+    "about.title": " About TempMail4U ",
+    "about.subtitle": " TempMail4U is your trusted provider of free, private, and disposable email addresses. We created this service with one goal: to help people stay safe, spam-free, and anonymous online. ",
+    "about.story.title": " Our Story ",
+    "about.story.para1": " TempMail4U was born out of frustration with endless spam, hacked email lists, and complicated sign-ups. We wanted a **simple, instant, and secure** solution that anyone could use without giving away personal details. ",
+    "about.story.para2": " Today, thousands of users worldwide rely on TempMail4U daily to keep their inbox clean while signing up for websites, testing apps, and downloading resources. ",
+    "about.mission.title": " Our Mission ",
+    "about.mission.para": " Our mission is to **protect your privacy and save your time online**. We believe every user should have the freedom to sign up, explore, and test services without worrying about spam, leaks, or unwanted emails. ",
+    "about.difference.title": " What Makes TempMail4U Different? ",
+    "about.difference.li1": "{$START_TAG_STRONG}No signup required:{$CLOSE_TAG_STRONG} Just open the site and start using your disposable inbox instantly.",
+    "about.difference.li2": "{$START_TAG_STRONG}Multiple options:{$CLOSE_TAG_STRONG} Choose between 10-minute mail, 20-minute, 30-minute, or 7-day saved inboxes.",
+    "about.difference.li3": "{$START_TAG_STRONG}Privacy first:{$CLOSE_TAG_STRONG} We don’t track you, log your usage, or sell your data.",
+    "about.difference.li4": "{$START_TAG_STRONG}Clean & fast:{$CLOSE_TAG_STRONG} No ads, no captchas, no clutter — just a simple, reliable experience.",
+    "about.join.title": " Join Our Growing Community ",
+    "about.join.para": " Over {$START_TAG_STRONG}500,000+ people{$CLOSE_TAG_STRONG} have already used TempMail4U to keep their email safe. Whether you’re a student, developer, freelancer, or just someone who values privacy — this service is built for you. ",
+    "about.join.button": " Get Your Free Temp Mail Now ",
+    "seo.about.title": "About TempMail4u - Privacy First Temporary Email Service",
+    "seo.about.description": "Learn how TempMail4u helps you stay private online with disposable inboxes, instant setup, and spam control.",
+    "seo.about.keywords": "about tempmail, temp mail info, disposable email service, privacy email, spam control",
+    "contact.title": " Contact Us ",
+    "contact.subtitle": " Have questions about our {$START_TAG_STRONG}temporary email{$CLOSE_TAG_STRONG} services? Need help with your {$START_TAG_STRONG}temp mail{$CLOSE_TAG_STRONG} or {$START_TAG_STRONG}temporary inbox{$CLOSE_TAG_STRONG}? Get in touch below. ",
+    "contact.form.title": " Send Us a Message ",
+    "contact.form.name": "Your Name",
+    "contact.form.email": "Your Email",
+    "contact.form.message": "Message",
+    "contact.form.submit": " Send Message ",
+    "contact.form.disclaimer": " *This form is for general inquiries only. For inbox issues, please refresh or generate a new {$START_TAG_STRONG}one time email{$CLOSE_TAG_STRONG}. ",
+    "seo.contact.title": "Contact TempMail4u - Support and Feedback",
+    "seo.contact.description": "Reach out to the TempMail4u team for support, suggestions, and partnership inquiries.",
+    "seo.contact.keywords": "contact tempmail, support temp mail, disposable email help, feedback, partnership",
     "email10minTitle": " 10 Minutes Temporary Email – Free Disposable Inbox Without Signup ",
     "email10minSubtitle": " Instantly generate a {$START_TAG_STRONG}10 minutes temporary email address{$CLOSE_TAG_STRONG}. Perfect for email verifications, OTPs, and anonymous sign-ups without exposing your personal inbox. ",
     "whatIs10minEmail": "What is a 10 Minutes Temporary Email?",
@@ -322,9 +354,9 @@
     "home.section.cta.subtitle.label": " Join over {$START_TAG_STRONG}500,000+ users{$CLOSE_TAG_STRONG} worldwide who use our {$START_EMPHASISED_TEXT}burner email generator{$CLOSE_EMPHASISED_TEXT} daily to stay safe online. No tracking, no logs, no credit card required, just pure privacy when you need it. ",
     "home.section.cta.button.label": " Generate Email Now ",
     "home.section.cta.disclaimer.label": " 100% Free Forever • Secure • Spam-Free ",
-    "seo.home.title": "Temp Mail – Free Temporary Email & Disposable Inbox Service",
-    "seo.home.description": "Temp mail lets you create free temporary emails instantly. Keep your inbox private and spam-free with our disposable service. No signup—try it now!",
-    "seo.home.keywords": "temporary email, disposable email, free temp mail, anonymous email, burner email, fake email, spam protection, email verification, privacy mail, temp mail service",
+    "seo.home.title": "Free Temporary Email & Disposable Inbox | TempMail4u",
+    "seo.home.description": "Create a free temp email in seconds. Get a disposable inbox to keep your real address private and spam-free. No sign up required. Try TempMail4u now!",
+    "seo.home.keywords": "temporary email, temp mail, disposable email, burner email, anonymous email, fake email, spam protection, email verification, privacy email, temporary mailbox",
     "seo.home.siteName": "TempMail4u",
     "privacy.title": "Privacy Policy",
     "privacy.lastUpdated": "Last updated: December 2024",
@@ -388,6 +420,51 @@
     "savedEmail.success.subtitle": "Redirecting to your saved email inbox...",
     "savedEmail.daysRemaining": "{$INTERPOLATION} days remaining",
     "savedEmail.error.title": "Access Link Invalid",
-    "savedEmail.error.generateNew": " Generate New Email "
+    "savedEmail.error.generateNew": " Generate New Email ",
+    "services.title": " Our Temporary Email Services ",
+    "services.subtitle": " Protect your privacy with a free {$START_TAG_STRONG}temp mail{$CLOSE_TAG_STRONG} solution. Whether you need a quick {$START_TAG_STRONG}one time email{$CLOSE_TAG_STRONG} or a longer-lasting {$START_TAG_STRONG}temporary inbox{$CLOSE_TAG_STRONG}, TempMail4U has you covered. ",
+    "services.list.title": " Choose Your Disposable Inbox ",
+    "services.card.10.title": " 10-Minute Mail ",
+    "services.card.10.desc": " A short-lived {$START_TAG_STRONG}one time email{$CLOSE_TAG_STRONG} for instant verifications. ",
+    "services.card.20.title": " 20-Minute Mail ",
+    "services.card.20.desc": " Extra time for multi-step signups and delayed codes. ",
+    "services.card.30.title": " 30-Minute Mail ",
+    "services.card.30.desc": " A longer {$START_TAG_STRONG}temporary inbox{$CLOSE_TAG_STRONG} for apps and free trials. ",
+    "services.card.7.title": " 7-Day Saved Inbox ",
+    "services.card.7.desc": " Keep your {$START_TAG_STRONG}temporary email{$CLOSE_TAG_STRONG} active for up to a week - perfect for projects and ongoing tasks. ",
+    "services.card.7.note": " Save your unique link to revisit anytime within 7 days. ",
+    "services.features.title": " Why Use TempMail4U? ",
+    "services.features.li1": " Instant {$START_TAG_STRONG}temp mail{$CLOSE_TAG_STRONG} address - no signup needed ",
+    "services.features.li2": " Privacy-first: no tracking, no spam, no ads ",
+    "services.features.li3": " Clean, fast, mobile-friendly interface ",
+    "services.features.li4": " Flexible durations: 10m, 20m, 30m, and 7-day inbox ",
+    "services.cta.title": " Start With Your Free Disposable Inbox ",
+    "services.cta.desc": " Create a {$START_TAG_STRONG}temporary email{$CLOSE_TAG_STRONG} instantly and keep your personal inbox safe from spam. ",
+    "services.cta.button": " Generate Temp Mail Now ",
+    "seo.services.title": "Temporary Email Services - Disposable Inboxes, Custom Aliases, OTP Support",
+    "seo.services.description": "Use TempMail4u for quick signups, app testing, and OTP verifications. Create disposable inboxes instantly and keep your real email safe.",
+    "seo.services.keywords": "temporary email services, disposable inbox, burner email, otp email, test email, spam protection",
+    "terms.title": " Terms & Conditions ",
+    "terms.subtitle": " Please read these terms and conditions carefully before using TempMail4U’s services. ",
+    "terms.acceptance.title": " 1. Acceptance of Terms ",
+    "terms.acceptance.para": " By accessing or using TempMail4U (the “Service”), you agree to comply with and be bound by these Terms & Conditions. If you do not agree, you must discontinue using our one time email, temporary email, temp mail, and temporary inbox services. ",
+    "terms.use.title": " 2. Permitted Use ",
+    "terms.use.para": " TempMail4U provides disposable inboxes for short-term use. You may use them for sign-ups, testing, downloads, and other lawful activities. You may not use the Service to send spam, abuse, phishing attempts, or any unlawful content. ",
+    "terms.limits.title": " 3. Limitations ",
+    "terms.limits.li1": "All inboxes are temporary and may expire automatically.",
+    "terms.limits.li2": "The Service is receive-only; you cannot send outgoing emails.",
+    "terms.limits.li3": "We do not guarantee email delivery or retention.",
+    "terms.limits.li4": "We are not responsible for loss of data once an inbox expires.",
+    "terms.privacy.title": " 4. Privacy ",
+    "terms.privacy.para": " TempMail4U does not collect personal information when you generate a one time email or temporary inbox. For more details, please review our {$START_LINK}Privacy Policy{$CLOSE_LINK}. ",
+    "terms.disclaimer.title": " 5. Disclaimer of Liability ",
+    "terms.disclaimer.para": " The Service is provided “as is” without warranties of any kind. TempMail4U shall not be held liable for damages, losses, or consequences resulting from the use or misuse of the Service. ",
+    "terms.changes.title": " 6. Changes to Terms ",
+    "terms.changes.para": " We may update these Terms & Conditions at any time. Continued use of the Service after changes implies acceptance. ",
+    "terms.contact.title": " 7. Contact Us ",
+    "terms.contact.para": " If you have any questions regarding these Terms, please reach us via our {$START_LINK}Contact Us{$CLOSE_LINK} page. ",
+    "seo.terms.title": "Terms & Conditions – TempMail4U | Temporary Email & Temp Mail",
+    "seo.terms.description": "Read the Terms & Conditions for using TempMail4U's services, including one time email, temporary email, temp mail, and temporary inbox options.",
+    "seo.terms.keywords": "terms and conditions, temp mail terms, temporary email policy, one time email rules, temporary inbox conditions"
   }
 }
